--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,9 @@
         <title>{{title}}</title>
     </head>
     <body>
+            <a href="/new_post">New Entry</a>
+            <a href="/blog">Main Page</a>
+            
 
         {% block content %}
         {% endblock %}
